<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_activity">
    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.teamsclone.ui.Activity"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.teamsclone.ui.Chat"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_meet"
        android:name="com.example.teamsclone.ui.Meet"
        android:label="@string/title_meet"
        tools:layout="@layout/fragment_meet" />

</navigation>