<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpBirthday"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/microsoftlogo" />

        <TextView
            android:id="@+id/textViewPhone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryText"
            android:paddingLeft="20sp"
            />


        <TextView
            android:id="@+id/birthdate"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:paddingLeft="20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/sign_up_bday_frag_text" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/sign_up_bday_frag_msg"
            android:textColor="@color/colorPrimaryText"
            android:textSize="11dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/sign_up_birthdate"
            android:textSize="11dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/sign_up_birthday_frag_choose_date"
                android:textSize="16dp" />

            <Button
                android:id="@+id/choose_bdate"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_arrow_drop_down_24" />
        </LinearLayout>


        <Button
            android:layout_gravity="right"
            android:id="@+id/bday_frag_next"
            android:layout_marginTop="25sp"
            android:layout_marginRight="20dp"
            android:background="@color/colorBlue"
            android:textColor="@color/design_default_color_surface"
            android:layout_height="25dp"
            android:layout_width="wrap_content"
            android:text="@string/sign_up_phone_next"
            android:textSize="12dp" />
    </LinearLayout>
</FrameLayout>