<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70sp"
            android:layout_marginBottom="5sp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/login_page_microsoft_teams"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:background="@drawable/login_page_people" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingTop="5dp"
            android:paddingRight="50dp"
            android:paddingBottom="5dp"
            android:text="@string/login_page_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="60sp"
            android:layout_marginRight="35dp"
            android:elevation="10dp"
            android:background="@drawable/login_page_edit_text_style"
            android:ems="10"
            android:hint="@string/hint_phone_edit_text"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/login_page_button_style"
            android:elevation="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/login_page_sign_in"
            android:textColor="@color/design_default_color_surface"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:text="Working..."
            android:gravity="center"
            android:visibility="invisible"
            android:textColor="@color/design_default_color_error" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="90sp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/login_page_signup_btn"
            android:drawableLeft="@drawable/microsoft"
            android:elevation="10dp"
            android:paddingLeft="5sp"
            android:text="@string/Sign_up_for_free"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>