<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpPhone"
 >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/microsoftlogo" />
        <TextView
            android:id="@+id/create"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:paddingLeft="20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/sign_up_phone_text" />


        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="phone"
            android:textSize="15sp"
            android:hint="Phone number"/>

        <TextView
            android:id="@+id/text_error"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/design_default_color_error"
            android:textSize="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/text"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textSize="11dp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/sign_up_page_msg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="40sp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/sign_up_phone_back"
                android:textSize="12dp"
                android:background="@color/colorGrey"/>


            <Button
                android:layout_marginLeft="7dp"
                android:id="@+id/button"
                android:background="@color/colorBlue"
                android:textColor="@color/design_default_color_surface"
                android:layout_height="25dp"
                android:layout_width="wrap_content"
                android:text="@string/sign_up_phone_next"
                android:textSize="12dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>