<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpName"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/microsoftlogo" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryText"
            android:paddingLeft="20sp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:paddingLeft="20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/sign_up_name_frag_name" />
        <TextView
            android:id="@+id/text"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textSize="11dp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/sign_up_name_frag_msg" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:hint="First Name"/>


        <EditText
            android:id="@+id/editTextLastName"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:hint="Last Name"/>


        <Button
           android:layout_gravity="right"
            android:id="@+id/name_frag_next"
            android:layout_marginTop="25sp"
            android:layout_marginRight="20dp"
            android:background="@color/colorBlue"
            android:textColor="@color/design_default_color_surface"
            android:layout_height="25dp"
            android:layout_width="wrap_content"
            android:text="@string/sign_up_phone_next"
            android:textSize="12dp" />
    </LinearLayout>
</FrameLayout>